[gd_scene load_steps=86 format=3 uid="uid://ckx5s1lircfn1"]

[ext_resource type="Script" uid="uid://b4725nk37cxdw" path="res://script/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://cl4gmc4mchx35" path="res://assets/enemy/V2/EnemyAttack.png" id="2_wujgv"]
[ext_resource type="Texture2D" uid="uid://dn57xkqnl7vqg" path="res://assets/enemy/V2/enemydead.png" id="3_hb8ge"]
[ext_resource type="AudioStream" uid="uid://llakvsobuaav" path="res://Sound/nissan_dead.MP3" id="3_qi2p4"]
[ext_resource type="Texture2D" uid="uid://d35sorvjhqi1o" path="res://assets/enemy/V2/EnemyIdle_2.png" id="4_wujgv"]
[ext_resource type="Texture2D" uid="uid://b522h0axw2313" path="res://assets/enemy/V2/EnemiesWalkRE.png" id="5_hb8ge"]
[ext_resource type="AudioStream" uid="uid://oaxnsmpv4wso" path="res://Sound/shanks-haki.mp3" id="6_3yqyl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g3onx"]
atlas = ExtResource("2_wujgv")
region = Rect2(4096, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_o707m"]
atlas = ExtResource("2_wujgv")
region = Rect2(6144, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_difxq"]
atlas = ExtResource("2_wujgv")
region = Rect2(8192, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tv8x"]
atlas = ExtResource("2_wujgv")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnl6c"]
atlas = ExtResource("2_wujgv")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8kvh"]
atlas = ExtResource("2_wujgv")
region = Rect2(4096, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj7qy"]
atlas = ExtResource("2_wujgv")
region = Rect2(6144, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qilb"]
atlas = ExtResource("2_wujgv")
region = Rect2(8192, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdqh"]
atlas = ExtResource("2_wujgv")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccbbw"]
atlas = ExtResource("2_wujgv")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6srv"]
atlas = ExtResource("2_wujgv")
region = Rect2(4096, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx15q"]
atlas = ExtResource("2_wujgv")
region = Rect2(6144, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_v02nr"]
atlas = ExtResource("2_wujgv")
region = Rect2(8192, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pk15"]
atlas = ExtResource("2_wujgv")
region = Rect2(0, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaian"]
atlas = ExtResource("2_wujgv")
region = Rect2(2048, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8nyb"]
atlas = ExtResource("2_wujgv")
region = Rect2(4096, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("3_hb8ge")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wg26"]
atlas = ExtResource("3_hb8ge")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_qskgw"]
atlas = ExtResource("3_hb8ge")
region = Rect2(4096, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxkh0"]
atlas = ExtResource("3_hb8ge")
region = Rect2(6144, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyvri"]
atlas = ExtResource("3_hb8ge")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_qftu3"]
atlas = ExtResource("3_hb8ge")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybt8m"]
atlas = ExtResource("3_hb8ge")
region = Rect2(4096, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sfiy"]
atlas = ExtResource("3_hb8ge")
region = Rect2(6144, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb2o4"]
atlas = ExtResource("3_hb8ge")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr6c1"]
atlas = ExtResource("3_hb8ge")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hbvk"]
atlas = ExtResource("3_hb8ge")
region = Rect2(4096, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n35i"]
atlas = ExtResource("3_hb8ge")
region = Rect2(6144, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_hojbl"]
atlas = ExtResource("3_hb8ge")
region = Rect2(0, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_34hay"]
atlas = ExtResource("3_hb8ge")
region = Rect2(2048, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_3un5y"]
atlas = ExtResource("3_hb8ge")
region = Rect2(4096, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("4_wujgv")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("4_wujgv")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("4_wujgv")
region = Rect2(4096, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("4_wujgv")
region = Rect2(6144, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("4_wujgv")
region = Rect2(8192, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("4_wujgv")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("4_wujgv")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("4_wujgv")
region = Rect2(4096, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("4_wujgv")
region = Rect2(6144, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("4_wujgv")
region = Rect2(8192, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("4_wujgv")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("4_wujgv")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q82m"]
atlas = ExtResource("4_wujgv")
region = Rect2(4096, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_epc7x"]
atlas = ExtResource("4_wujgv")
region = Rect2(6144, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rgc"]
atlas = ExtResource("4_wujgv")
region = Rect2(8192, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdav3"]
atlas = ExtResource("4_wujgv")
region = Rect2(0, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpbtr"]
atlas = ExtResource("4_wujgv")
region = Rect2(2048, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdfx"]
atlas = ExtResource("4_wujgv")
region = Rect2(4096, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_qku5p"]
atlas = ExtResource("4_wujgv")
region = Rect2(6144, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1fjw"]
atlas = ExtResource("4_wujgv")
region = Rect2(8192, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5wqg"]
atlas = ExtResource("4_wujgv")
region = Rect2(0, 8192, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgro5"]
atlas = ExtResource("4_wujgv")
region = Rect2(2048, 8192, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rq2"]
atlas = ExtResource("4_wujgv")
region = Rect2(4096, 8192, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdwq"]
atlas = ExtResource("4_wujgv")
region = Rect2(6144, 8192, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgdh"]
atlas = ExtResource("4_wujgv")
region = Rect2(8192, 8192, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywceh"]
atlas = ExtResource("2_wujgv")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwccp"]
atlas = ExtResource("2_wujgv")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv0vf"]
atlas = ExtResource("5_hb8ge")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fu1e"]
atlas = ExtResource("5_hb8ge")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_p80fi"]
atlas = ExtResource("5_hb8ge")
region = Rect2(4096, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju3h7"]
atlas = ExtResource("5_hb8ge")
region = Rect2(6144, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3p7n"]
atlas = ExtResource("5_hb8ge")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ehh3"]
atlas = ExtResource("5_hb8ge")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nwx4"]
atlas = ExtResource("5_hb8ge")
region = Rect2(4096, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq8ad"]
atlas = ExtResource("5_hb8ge")
region = Rect2(6144, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1pr3"]
atlas = ExtResource("5_hb8ge")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxnat"]
atlas = ExtResource("5_hb8ge")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_nettl"]
atlas = ExtResource("5_hb8ge")
region = Rect2(4096, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_20yfm"]
atlas = ExtResource("5_hb8ge")
region = Rect2(6144, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6aid"]
atlas = ExtResource("5_hb8ge")
region = Rect2(0, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_t62om"]
atlas = ExtResource("5_hb8ge")
region = Rect2(2048, 6144, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_di3s7"]
atlas = ExtResource("5_hb8ge")
region = Rect2(4096, 6144, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_27j8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3onx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o707m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_difxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tv8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnl6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8kvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj7qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qilb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhdqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccbbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6srv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx15q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v02nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pk15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaian")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8nyb")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wg26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qskgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxkh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyvri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qftu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybt8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sfiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb2o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr6c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hbvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n35i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hojbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34hay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3un5y")
}],
"loop": false,
"name": &"dead",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q82m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qku5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1fjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5wqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgro5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgdh")
}],
"loop": true,
"name": &"idle",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywceh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwccp")
}],
"loop": false,
"name": &"point",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv0vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fu1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p80fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju3h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3p7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ehh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nwx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq8ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1pr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxnat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nettl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20yfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6aid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t62om")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di3s7")
}],
"loop": true,
"name": &"walk",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(306, 996)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(290, 1014.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epg4t"]
size = Vector2(1462.19, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3yqyl"]
size = Vector2(163.5, 271)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-49, -58)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_27j8q")
animation = &"dead"
frame = 14
frame_progress = 1.0

[node name="WallRay" type="RayCast2D" parent="."]
position = Vector2(67, 0)
scale = Vector2(20, 20)
target_position = Vector2(-27.35, -0.25)

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(67, 0)
scale = Vector2(20, 20)
target_position = Vector2(-0.1, 25.85)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(71, -3)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qi2p4")
volume_db = -5.0

[node name="BackStabArea" type="Area2D" parent="."]
position = Vector2(560, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackStabArea"]
shape = SubResource("RectangleShape2D_qi2p4")

[node name="VisionArea" type="Area2D" parent="."]
position = Vector2(-810, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("RectangleShape2D_epg4t")

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3yqyl")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-287, -233)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_3yqyl")
